fixed contrast ratios

--- a/css/index.css
+++ b/css/index.css
@@ -14,17 +14,18 @@ html {
 body {
   font-size: 1.6rem;
   font-family: 'Anonymous Pro', monospace;
-  color: #000000;
+  color: #212121;
   background-color: #ffecd8;
 }
 
 a {
-  color: #000000;
+  color: #6200EA;
   text-decoration: none;
 }
 
 h1 {
   font-family: 'Poppins', sans-serif;
+  color: #424242;
 }
 
 /* -------------------------------- 
@@ -61,7 +62,6 @@ General Style
   font-weight: 700;
   line-height: 1.4;
   margin: 1em 0;
-  color: #6d7a97;
 }
 .cd-intro-content .action-wrapper {
   display: inline-block;
@@ -89,11 +89,11 @@ General Style
   display: inline-block;
   padding: 1.2em 1.4em;
   font-size: 1.3rem;
-  color: #000000;
+  color: #ffecd8;
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 1px;
-  background-color: #d8ebff;
+  background-color: #0D47A1;
   border-radius: .25em;
   margin-right: 1.5em;
 }
@@ -101,7 +101,7 @@ General Style
   margin-right: 0;
 }
 .cd-btn.main-action {
-  background-color: #ffd9d8;
+  background-color: #880E4F;
 }
 @media only screen and (min-width: 480px) {
   .cd-btn {
